Update endpoints & API doc
